{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 143,
  "lineage": "2e95a490-ccaf-1e7b-db74-fae93637298a",
  "resources": [
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c2d838af-0b32-4bc9-a21a-3976f8cfcc53",
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "centralindia",
            "name": "aks-vnet",
            "resource_group_name": "test",
            "tags": {
              "environment": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet1-security-group",
            "location": "centralindia",
            "name": "test-aks-subnet1-security-group",
            "resource_group_name": "test",
            "security_rule": [],
            "tags": {
              "environment": "test",
              "subnet_type": "subnet1"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet1-security-group/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "test-aks-subnet1-security-group",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet.module.subnet.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet1-security-group/securityRules/DenyAllOutbound",
            "name": "DenyAllOutbound",
            "network_security_group_name": "test-aks-subnet1-security-group",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet.module.subnet.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "test",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet1-security-group",
            "subnet_id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet1"
          },
          "dependencies": [
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.module.subnet.azurerm_network_security_group.nsg",
            "module.vnet.module.subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet2-security-group",
            "location": "centralindia",
            "name": "test-aks-subnet2-security-group",
            "resource_group_name": "test",
            "security_rule": [],
            "tags": {
              "environment": "test",
              "subnet_type": "subnet2"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet2-security-group/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "test-aks-subnet2-security-group",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet.module.subnet.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet2-security-group/securityRules/DenyAllOutbound",
            "name": "DenyAllOutbound",
            "network_security_group_name": "test-aks-subnet2-security-group",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet.module.subnet.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "test",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet.module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet2",
            "network_security_group_id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/networkSecurityGroups/test-aks-subnet2-security-group",
            "subnet_id": "/subscriptions/8c874251-19f3-4632-814a-10696094b7bf/resourceGroups/test/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/subnet2"
          },
          "dependencies": [
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.module.subnet.azurerm_network_security_group.nsg",
            "module.vnet.module.subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    }
  ]
}